Download penguins dataset in console directly

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -2,3 +2,7 @@ P8105_HW1
 ================
 Haley Zylberberg
 
+\#Problem 1: This problem focuses the use of inline R code, plotting,
+and the behavior of ggplot for variables of different types.
+
+To start, download the penguins dataset in the console directly.
