--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -3,3 +3,8 @@ title: "P8105_HW1"
 author: "Haley Zylberberg"
 output: github_document
 ---
+
+#Problem 1: This problem focuses the use of inline R code, plotting, and the behavior of ggplot for variables of different types.
+
+To start, download the penguins dataset in the console directly.
+
