Call in libraries

--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -8,3 +8,9 @@ output: github_document
 
 To start, download the penguins dataset in the console directly.
 
+Next, call in moderndrive and tidyverse library.
+
+```{r setup}
+library(moderndive)
+library(tidyverse)
+```
