--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -13,3 +13,12 @@ Next, call in moderndrive and tidyverse library.
 library(moderndive)
 library(tidyverse)
 ```
+
+Load early_january_weather dataset.
+
+``` r
+data("early_january_weather")
+```
+
+    ## Warning in data("early_january_weather"): data set 'early_january_weather' not
+    ## found
