--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -22,3 +22,10 @@ data("early_january_weather")
 
     ## Warning in data("early_january_weather"): data set 'early_january_weather' not
     ## found
+
+Examine the dataset using the help and View functions.
+
+``` r
+help(early_january_weather)
+View(early_january_weather)
+```
