--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -14,14 +14,22 @@ library(moderndive)
 library(tidyverse)
 ```
 
+    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
+    ## ✔ dplyr     1.1.3     ✔ readr     2.1.4
+    ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
+    ## ✔ ggplot2   3.4.3     ✔ tibble    3.2.1
+    ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
+    ## ✔ purrr     1.0.2     
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
+
 Load early_january_weather dataset.
 
 ``` r
 data("early_january_weather")
 ```
-
-    ## Warning in data("early_january_weather"): data set 'early_january_weather' not
-    ## found
 
 Examine the dataset using the help and View functions.
 
@@ -29,3 +37,9 @@ Examine the dataset using the help and View functions.
 help(early_january_weather)
 View(early_january_weather)
 ```
+
+The dataset ‘Early January Weather’ depicts the hourly meterological
+data for the airport EWR for the month of January 2013. There are 358
+rows and 15 columns (i.e. variables) in the dataset. The variable names
+are origin, year, month, day, hour, temp, dewp, humid, wind_dir,
+wind_speed, wind_gust, precip, pressure, visib, time_hour.
