--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -43,3 +43,21 @@ data for the airport EWR for the month of January 2013. There are 358
 rows and 15 columns (i.e. variables) in the dataset. The variable names
 are origin, year, month, day, hour, temp, dewp, humid, wind_dir,
 wind_speed, wind_gust, precip, pressure, visib, time_hour.
+
+- The following are summary statistics:
+  - The mean temperature in F is 39.5821229 (SD 7.058637), with minimum
+    value 24.08 and maximum value 57.92.
+  - The mean dewpoint in F is 28.057095 ( SD 10.7260695), with minimum
+    value 8.96 and maximum value 53.06.
+  - The mean humidity is 65.4767039 (SD 18.9453049), with minimum value
+    32.86 and maximum value 100.
+  - The mean wind speed in mph is 8.2258269 (SD 4.6116356), with minimum
+    value 0 and maximum value 24.16638.
+  - The mean precipitation in inches is 0.0020391 (SD 0.0132008), with
+    minimum value 0 and maximum value 0.19.
+  - The mean visibility in miles is 8.5153352 (SD 2.9971051), with
+    minimum value 0.12 and maximum value 10.
+  - Statistics could not be obtained for the variables wind gust, wind
+    direction, and pressure due to missing variables (308 missing values
+    for wind gust, 5 missing values for wind direction, and 38 missing
+    values for pressure).
