--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -61,3 +61,13 @@ wind_speed, wind_gust, precip, pressure, visib, time_hour.
     direction, and pressure due to missing variables (308 missing values
     for wind gust, 5 missing values for wind direction, and 38 missing
     values for pressure).
+
+Next make a scatterplot of temp (y) vs time (hour) adding in color
+points with the humid variable.
+
+``` r
+ggplot(early_january_weather, aes(x = hour, y = temp, 
+color = humid)) + geom_point()
+```
+
+![](p8105_hw1_hmz2105_files/figure-gfm/yx_scatter-1.png)<!-- -->
