--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -71,3 +71,11 @@ color = humid)) + geom_point()
 ```
 
 ![](p8105_hw1_hmz2105_files/figure-gfm/yx_scatter-1.png)<!-- -->
+
+Next save plot.
+
+``` r
+ggsave("scatter_plot_HW1.pdf", height = 4, width = 6)
+```
+
+This scatterplot shows that
