Start problem 2, make the dataframe

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -2,8 +2,7 @@ P8105_HW1
 ================
 Haley Zylberberg
 
-\#Problem 1: This problem focuses the use of inline R code, plotting,
-and the behavior of ggplot for variables of different types.
+# Problem 1: This problem focuses the use of inline R code, plotting, and the behavior of ggplot for variables of different types.
 
 To start, download the penguins dataset in the console directly.
 
@@ -79,3 +78,37 @@ ggsave("scatter_plot_HW1.pdf", height = 4, width = 6)
 ```
 
 This scatterplot shows that
+
+# Problem 2: This problem is intended to emphasize variable types and introduce coercion; some awareness of how R treats numeric, character, and factor variables is necessary for working with these data types in practice.
+
+- Will create a data frame comprised of:
+  - a random sample of size 10 from a standard Normal distribution
+  - a logical vector indicating whether elements of the sample are
+    greater than 0
+  - a character vector of length 10
+  - a factor vector of length 10, with 3 different factor “levels”
+
+``` r
+HW1_df = tibble(
+  random_sample = rnorm(10),
+  random_sample_pos = random_sample > 0,
+  random_sample_char = c("A", "B", "C", "D", "E", "F", "G", "H", "I", "J"),
+  random_sample_fac = factor(rep(c("Level1", "Level2", "Level3"), length.out = 10))
+)
+
+print(HW1_df)
+```
+
+    ## # A tibble: 10 × 4
+    ##    random_sample random_sample_pos random_sample_char random_sample_fac
+    ##            <dbl> <lgl>             <chr>              <fct>            
+    ##  1       -0.134  FALSE             A                  Level1           
+    ##  2        1.22   TRUE              B                  Level2           
+    ##  3        0.0542 TRUE              C                  Level3           
+    ##  4       -2.37   FALSE             D                  Level1           
+    ##  5       -0.274  FALSE             E                  Level2           
+    ##  6       -1.72   FALSE             F                  Level3           
+    ##  7       -0.398  FALSE             G                  Level1           
+    ##  8       -0.0432 FALSE             H                  Level2           
+    ##  9        0.307  TRUE              I                  Level3           
+    ## 10       -0.584  FALSE             J                  Level1
