--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -4,7 +4,7 @@ author: "Haley Zylberberg"
 output: github_document
 ---
 
-#Problem 1: This problem focuses the use of inline R code, plotting, and the behavior of ggplot for variables of different types.
+# Problem 1: This problem focuses the use of inline R code, plotting, and the behavior of ggplot for variables of different types.
 
 To start, download the penguins dataset in the console directly.
 
@@ -51,4 +51,27 @@ Next save plot.
 ggsave("scatter_plot_HW1.pdf", height = 4, width = 6)
 ```
 
-This scatterplot shows that 
+This scatterplot shows that
+
+# Problem 2: This problem is intended to emphasize variable types and introduce coercion; some awareness of how R treats numeric, character, and factor variables is necessary for working with these data types in practice.
+
+* Will create a data frame comprised of:
+  * a random sample of size 10 from a standard Normal distribution
+  * a logical vector indicating whether elements of the sample are greater than 0
+  * a character vector of length 10
+  * a factor vector of length 10, with 3 different factor “levels”
+
+```{r HW1_df_create and print}
+
+HW1_df = tibble(
+  random_sample = rnorm(10),
+  random_sample_pos = random_sample > 0,
+  random_sample_char = c("A", "B", "C", "D", "E", "F", "G", "H", "I", "J"),
+  random_sample_fac = factor(rep(c("Level1", "Level2", "Level3"), length.out = 10))
+)
+
+print(HW1_df)
+```
+
+
+
