--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -89,6 +89,8 @@ This scatterplot shows that
   - a factor vector of length 10, with 3 different factor “levels”
 
 ``` r
+set.seed(123)
+
 HW1_df = tibble(
   random_sample = rnorm(10),
   random_sample_pos = random_sample > 0,
@@ -102,13 +104,15 @@ print(HW1_df)
     ## # A tibble: 10 × 4
     ##    random_sample random_sample_pos random_sample_char random_sample_fac
     ##            <dbl> <lgl>             <chr>              <fct>            
-    ##  1       -0.134  FALSE             A                  Level1           
-    ##  2        1.22   TRUE              B                  Level2           
-    ##  3        0.0542 TRUE              C                  Level3           
-    ##  4       -2.37   FALSE             D                  Level1           
-    ##  5       -0.274  FALSE             E                  Level2           
-    ##  6       -1.72   FALSE             F                  Level3           
-    ##  7       -0.398  FALSE             G                  Level1           
-    ##  8       -0.0432 FALSE             H                  Level2           
-    ##  9        0.307  TRUE              I                  Level3           
-    ## 10       -0.584  FALSE             J                  Level1
+    ##  1       -0.560  FALSE             A                  Level1           
+    ##  2       -0.230  FALSE             B                  Level2           
+    ##  3        1.56   TRUE              C                  Level3           
+    ##  4        0.0705 TRUE              D                  Level1           
+    ##  5        0.129  TRUE              E                  Level2           
+    ##  6        1.72   TRUE              F                  Level3           
+    ##  7        0.461  TRUE              G                  Level1           
+    ##  8       -1.27   FALSE             H                  Level2           
+    ##  9       -0.687  FALSE             I                  Level3           
+    ## 10       -0.446  FALSE             J                  Level1
+
+Calculate mean of each variable.
