--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -116,3 +116,11 @@ print(HW1_df)
     ## 10       -0.446  FALSE             J                  Level1
 
 Calculate mean of each variable.
+
+``` r
+mean_random_sample = mean(pull(HW1_df, random_sample))
+mean_random_sample_pos = mean(pull(HW1_df, random_sample_pos))
+```
+
+The mean of the variable random sample is 0.0746256. The mean of the
+logical vector is 0.5.
