Forgot to commit all docs as part of calculate mean

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -123,4 +123,5 @@ mean_random_sample_pos = mean(pull(HW1_df, random_sample_pos))
 ```
 
 The mean of the variable random sample is 0.0746256. The mean of the
-logical vector is 0.5.
+logical vector is 0.5. We cannot calculate the mean of a character or
+factor variable as they are not numeric variables.
