Converted variables to numeric

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -120,8 +120,32 @@ Calculate mean of each variable.
 ``` r
 mean_random_sample = mean(pull(HW1_df, random_sample))
 mean_random_sample_pos = mean(pull(HW1_df, random_sample_pos))
+mean_random_sample_char = mean(pull(HW1_df, random_sample_char))
 ```
+
+    ## Warning in mean.default(pull(HW1_df, random_sample_char)): argument is not
+    ## numeric or logical: returning NA
+
+``` r
+mean_random_sample_fac = mean(pull(HW1_df, random_sample_fac))
+```
+
+    ## Warning in mean.default(pull(HW1_df, random_sample_fac)): argument is not
+    ## numeric or logical: returning NA
 
 The mean of the variable random sample is 0.0746256. The mean of the
 logical vector is 0.5. We cannot calculate the mean of a character or
 factor variable as they are not numeric variables.
+
+Convert logical, character, and factor vectors to numeric.
+
+``` r
+HW1_df$random_sample_pos <- as.numeric(HW1_df$random_sample_pos)
+HW1_df$random_sample_char <- as.numeric(HW1_df$random_sample_char)
+```
+
+    ## Warning: NAs introduced by coercion
+
+``` r
+HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
+```
