--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -80,9 +80,16 @@ Calculate mean of each variable.
 ```{r pull variables and calculate mean}
 mean_random_sample = mean(pull(HW1_df, random_sample))
 mean_random_sample_pos = mean(pull(HW1_df, random_sample_pos))
+mean_random_sample_char = mean(pull(HW1_df, random_sample_char))
+mean_random_sample_fac = mean(pull(HW1_df, random_sample_fac))
 ```
 
 The mean of the variable random sample is `r mean(mean_random_sample)`. The mean of the logical vector is `r mean(mean_random_sample_pos)`. We cannot calculate the mean of a character or factor variable as they are not numeric variables. 
 
+Convert logical, character, and factor vectors to numeric.
 
-
+```{r}
+HW1_df$random_sample_pos <- as.numeric(HW1_df$random_sample_pos)
+HW1_df$random_sample_char <- as.numeric(HW1_df$random_sample_char)
+HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
+```
