Explanation for converting variables to numeric

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -134,18 +134,19 @@ mean_random_sample_fac = mean(pull(HW1_df, random_sample_fac))
     ## numeric or logical: returning NA
 
 The mean of the variable random sample is 0.0746256. The mean of the
-logical vector is 0.5. We cannot calculate the mean of a character or
-factor variable as they are not numeric variables.
+logical vector is 0.5, while this is technically a value it is just
+taking the mean of 0s and 1s, so it is meaningless. We cannot calculate
+the mean of a character or factor variable as they are not numeric
+variables.
 
 Convert logical, character, and factor vectors to numeric.
 
 ``` r
 HW1_df$random_sample_pos <- as.numeric(HW1_df$random_sample_pos)
 HW1_df$random_sample_char <- as.numeric(HW1_df$random_sample_char)
-```
-
-    ## Warning: NAs introduced by coercion
-
-``` r
 HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
 ```
+
+This code is trying to convert these character variables into numeric
+variables. However, these variables cannot be converted to numeric, and
+so mean cannot be calculated.
