--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -84,12 +84,14 @@ mean_random_sample_char = mean(pull(HW1_df, random_sample_char))
 mean_random_sample_fac = mean(pull(HW1_df, random_sample_fac))
 ```
 
-The mean of the variable random sample is `r mean(mean_random_sample)`. The mean of the logical vector is `r mean(mean_random_sample_pos)`. We cannot calculate the mean of a character or factor variable as they are not numeric variables. 
+The mean of the variable random sample is `r mean(mean_random_sample)`. The mean of the logical vector is `r mean(mean_random_sample_pos)`, while this is technically a value it is just taking the mean of 0s and 1s, so it is meaningless. We cannot calculate the mean of a character or factor variable as they are not numeric variables. 
 
 Convert logical, character, and factor vectors to numeric.
 
-```{r}
+```{r convert to numeric, warning=FALSE}
 HW1_df$random_sample_pos <- as.numeric(HW1_df$random_sample_pos)
 HW1_df$random_sample_char <- as.numeric(HW1_df$random_sample_char)
 HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
 ```
+
+This code is trying to convert these character variables into numeric variables. However, these variables cannot be converted to numeric, and so mean cannot be calculated.
