Add in explanation for scatterplot

--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -77,7 +77,8 @@ Next save plot.
 ggsave("scatter_plot_HW1.pdf", height = 4, width = 6)
 ```
 
-This scatterplot shows that
+This scatterplot shows that the higher temperatures tend to have the
+higher humidity, and this tends to occur at earlier hours.
 
 # Problem 2: This problem is intended to emphasize variable types and introduce coercion; some awareness of how R treats numeric, character, and factor variables is necessary for working with these data types in practice.
 
