--- a/p8105_hw1_hmz2105.Rmd
+++ b/p8105_hw1_hmz2105.Rmd
@@ -41,9 +41,11 @@ The dataset 'Early January Weather' depicts the hourly meterological data for th
 Next make a scatterplot of temp (y) vs time (hour) adding in color points with the humid variable. 
 
 ```{r yx_scatter}
-ggplot(early_january_weather, aes(x = hour, y = temp, 
+ggplot(early_january_weather, aes(x = time_hour, y = temp, 
 color = humid)) + geom_point()
 ```
+
+This scatterplot shows that the temperature increases as the time_hour increases, though there is no clear linear relationship. The humidity also seems to increase with the temperature and time hour.
 
 Next save plot.
 
@@ -51,7 +53,7 @@ Next save plot.
 ggsave("scatter_plot_HW1.pdf", height = 4, width = 6)
 ```
 
-This scatterplot shows that the higher temperatures tend to have the higher humidity, and this tends to occur at earlier hours.
+
 
 # Problem 2: This problem is intended to emphasize variable types and introduce coercion; some awareness of how R treats numeric, character, and factor variables is necessary for working with these data types in practice.
 
