--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -150,5 +150,7 @@ HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
 ```
 
 This code is trying to convert these character variables into numeric
-variables. However, these variables cannot be converted to numeric, and
-so mean cannot be calculated.
+variables. However, the logical and character vectors cannot be
+converted to numeric, and the factor numeric is meaningless as it
+converts each level to a number. Therefore the means cannot be
+calculated.
