--- a/p8105_hw1_hmz2105.md
+++ b/p8105_hw1_hmz2105.md
@@ -38,10 +38,10 @@ View(early_january_weather)
 ```
 
 The dataset ‘Early January Weather’ depicts the hourly meterological
-data for the airport EWR for the month of January 2013. There are 358
-rows and 15 columns (i.e. variables) in the dataset. The variable names
-are origin, year, month, day, hour, temp, dewp, humid, wind_dir,
-wind_speed, wind_gust, precip, pressure, visib, time_hour.
+data for the airport EWR for January 2013. There are 358 rows and 15
+columns (i.e. variables) in the dataset. The variable names are origin,
+year, month, day, hour, temp, dewp, humid, wind_dir, wind_speed,
+wind_gust, precip, pressure, visib, time_hour.
 
 - The following are summary statistics:
   - The mean temperature in F is 39.5821229 (SD 7.058637), with minimum
@@ -144,13 +144,13 @@ variables.
 Convert logical, character, and factor vectors to numeric.
 
 ``` r
-HW1_df$random_sample_pos <- as.numeric(HW1_df$random_sample_pos)
-HW1_df$random_sample_char <- as.numeric(HW1_df$random_sample_char)
-HW1_df$random_sample_fac <- as.numeric(HW1_df$random_sample_fac)
+HW1_df = transform(HW1_df, random_sample_pos = as.numeric(random_sample_pos))
+HW1_df = transform(HW1_df, random_sample_char = as.numeric(random_sample_char))
+HW1_df = transform(HW1_df, random_sample_fac = as.numeric(random_sample_fac))
 ```
 
-This code is trying to convert these character variables into numeric
-variables. However, the logical and character vectors cannot be
-converted to numeric, and the factor numeric is meaningless as it
-converts each level to a number. Therefore the means cannot be
-calculated.
+This code is trying to convert these variables into numeric variables.
+However, the character vectors cannot be converted to numeric. The
+logical vector becomes a binary numeric value and the factor vector
+becomes a 3 level numeric value; both are meaningless. Therefore the
+means cannot be calculated.
